Finalize main class and parse arguments